# python-cpp

./: .clang-format  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  renovate.json
integration/: CMakeLists.txt  main.cpp  program.cpp  run_integration_tests.sh  run_llvm_python_tests.sh  run_python_tests.sh
integration/aoc/2024/: day1.py
integration/aoc/2024/data/: day1.txt
integration/fibonacci/: fibo.py  main.py
integration/llvm/: simple_typed_func.py
integration/mandelbrot/: README.md  mandelbrot.py
integration/tests/: attributes.py  break_continue_in_try.py  bytes.py  classes.py  closures.py  comprehension.py  control_flow.py  delete.py  dict.py  echo.py  eval.py  exception_attributes.py  exception_binding.py  exception_chaining.py  exception_types.py  file_io.py  for.py  fstring.py  function.py  generator.py  generator_consume.py  global.py  imp.py  inheritance.py  inheritance_blt.py  integer.py  itertools.py  list.py  logical.py  metaclass.py  module.py  number.py  posix.py  programs.py  range.py  regalloc_exception_liveness.py  regalloc_exception_liveness_shapes.py  repr_quoting.py  reversed.py  sequence.py  (+14 more)
integration/tests/lemmas/: assert_false.py  assert_true.py
integration/tests/test/: main.py
src/: CMakeLists.txt  forward.hpp  main.cpp  utilities.hpp
src/ast/: AST.cpp  AST.hpp  ASTArena.cpp  ASTArena.hpp  ASTArena_tests.cpp  Module.cpp
src/ast/optimizers/: ConstantFolding.cpp  ConstantFolding.hpp  Optimizers_tests.cpp  README.md
src/bytecode/: BytecodeGenerator.cpp  BytecodeGenerator.hpp  Heap.cpp  Heap.hpp  VM.cpp  VM.hpp
src/bytecode/instructions/: FunctionCall.cpp  FunctionCall.hpp  FunctionCallWithKeywords.cpp  FunctionCallWithKeywords.hpp  InplaceAdd.hpp  Instructions.cpp  Instructions.hpp  LoadAttr.cpp  LoadAttr.hpp  LoadBuildClass.cpp  LoadBuildClass.hpp  LoadMethod.cpp  LoadMethod.hpp  LoadName.cpp  LoadName.hpp  MethodCall.cpp  MethodCall.hpp  ReturnValue.cpp  ReturnValue.hpp  StoreAttr.cpp  StoreAttr.hpp  StoreName.cpp  StoreName.hpp  UnpackSequence.cpp  UnpackSequence.hpp
src/executable/: Function.hpp  FunctionBlock.hpp  Label.hpp  Mangler.cpp  Mangler.hpp  Program.cpp  Program.hpp  common.hpp
src/executable/bytecode/: Bytecode.cpp  Bytecode.hpp  BytecodeGenerator.cpp  BytecodeGenerator.hpp  BytecodeProgram.cpp  BytecodeProgram.hpp  BytecodeProgram_tests.cpp  Bytecode_tests.cpp
src/executable/bytecode/codegen/: BytecodeGenerator.cpp  BytecodeGenerator.hpp  BytecodeGenerator_tests.cpp  VariablesResolver.cpp  VariablesResolver.hpp  VariablesResolver_tests.cpp
src/executable/bytecode/instructions/: BinaryOperation.cpp  BinaryOperation.hpp  BinarySubscript.cpp  BinarySubscript.hpp  BuildDict.cpp  BuildDict.hpp  BuildList.cpp  BuildList.hpp  BuildSet.cpp  BuildSet.hpp  BuildSlice.cpp  BuildSlice.hpp  BuildString.cpp  BuildString.hpp  BuildTuple.cpp  BuildTuple.hpp  ClearExceptionState.cpp  ClearExceptionState.hpp  ClearTopCleanup.cpp  ClearTopCleanup.hpp  CompareOperation.cpp  CompareOperation.hpp  DeleteAttr.cpp  DeleteAttr.hpp  DeleteDeref.cpp  DeleteDeref.hpp  DeleteFast.cpp  DeleteFast.hpp  DeleteGlobal.cpp  DeleteGlobal.hpp  DeleteName.cpp  DeleteName.hpp  DeleteSubscript.cpp  DeleteSubscript.hpp  DictAdd.cpp  DictAdd.hpp  DictMerge.cpp  DictMerge.hpp  DictUpdate.cpp  DictUpdate.hpp  (+139 more)
src/executable/bytecode/serialization/: deserialize.hpp  serialize.hpp
src/executable/llvm/: LLVMFunction.cpp  LLVMGenerator.cpp  LLVMGenerator.hpp  LLVMGenerator_tests.cpp  LLVMProgram.cpp  LLVMProgram.hpp  LLVMPyUtils.cpp  LLVMPyUtils.hpp
src/executable/mlir/: CMakeLists.txt  compile.cpp  compile.hpp  main.cpp
src/executable/mlir/Conversion/: CMakeLists.txt  Passes.hpp  Passes.td
src/executable/mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
src/interpreter/: ExecutionFrame.cpp  ExecutionFrame.hpp  GarbageCollector.cpp  GarbageCollector.hpp  Interpreter.cpp  Interpreter.hpp  InterpreterSession.cpp  InterpreterSession.hpp
src/lexer/: Lexer.cpp  Lexer.hpp  Lexer_tests.cpp
src/memory/: GarbageCollector.cpp  GarbageCollector.hpp  GarbageCollector_tests.cpp  Heap.cpp  Heap.hpp  Heap_test.hpp  Heap_tests.cpp
src/parser/: Parser.cpp  Parser.hpp  Parser_tests.cpp
src/repl/: repl.cpp
src/runtime/: AssertionError.cpp  AssertionError.hpp  AttributeError.cpp  AttributeError.hpp  BaseException.cpp  BaseException.hpp  CustomPyObject.cpp  CustomPyObject.hpp  Exception.cpp  Exception.hpp  GeneratorInterface.cpp  GeneratorInterface.hpp  Import.cpp  Import.hpp  ImportError.cpp  ImportError.hpp  IndexError.cpp  IndexError.hpp  KeyError.cpp  KeyError.hpp  Lock.hpp  LookupError.cpp  LookupError.hpp  MemoryError.cpp  MemoryError.hpp  ModuleNotFoundError.cpp  ModuleNotFoundError.hpp  NameError.cpp  NameError.hpp  NotImplemented.cpp  NotImplemented.hpp  NotImplementedError.cpp  NotImplementedError.hpp  OSError.cpp  OSError.hpp  PyArgParser.hpp  PyAsyncGenerator.cpp  PyAsyncGenerator.hpp  PyBool.cpp  PyBool.hpp  (+125 more)
src/runtime/frozen/: importlib.h  importlib_external.h
src/runtime/modules/: BuiltinsModule.cpp  CodecsModule.cpp  GcModule.cpp  IOModule.cpp  ImpModule.cpp  MarshalModule.cpp  Modules.hpp  PosixModule.cpp  README.md  SysModule.cpp  ThreadModule.cpp  WarningsModule.cpp  WeakRefModule.cpp  config.hpp  paths.hpp.in
src/runtime/modules/collections/: DefaultDict.cpp  DefaultDict.hpp  Deque.cpp  Deque.hpp  module.cpp
src/runtime/modules/errno/: module.cpp
src/runtime/modules/itertools/: Chain.cpp  Chain.hpp  Count.cpp  Count.hpp  ISlice.cpp  ISlice.hpp  Permutations.cpp  Permutations.hpp  Product.cpp  Product.hpp  Repeat.cpp  Repeat.hpp  StarMap.cpp  StarMap.hpp  module.cpp
src/runtime/types/: api.hpp  builtin.cpp  builtin.hpp
src/runtime/warnings/: DeprecationWarning.cpp  DeprecationWarning.hpp  ImportWarning.cpp  ImportWarning.hpp  PendingDeprecationWarning.cpp  PendingDeprecationWarning.hpp  ResourceWarning.cpp  ResourceWarning.hpp  Warning.cpp  Warning.hpp
src/testing/: main.cpp
src/utilities/: freeze.cpp
src/vm/: VM.cpp  VM.hpp
(+95 files in other folders)
